# scoped-llm-public

./: .gitignore  README.md  experiment_methodology_summary.txt  inputs.pkl  logs.txt  main.py  pca.py  pyproject.toml  refusal_behavior_vector.svec  requirements.txt  setup.sh  test_activation_steering.py  vectors.csv
folder_of_shame/: GCGScoper.py  PromptSuffixScoper.py
llm_controllers/: activation_controller.py  llm_controller.py
mmlu_dataset/: mmlu_dataset_abstract_algebra_test_50.pkl  mmlu_dataset_abstract_algebra_test_500.pkl  mmlu_dataset_anatomy_test_50.pkl  mmlu_dataset_anatomy_test_500.pkl  mmlu_dataset_astronomy_test_500.pkl  mmlu_dataset_business_ethics_test_500.pkl  mmlu_dataset_clinical_knowledge_test_5.pkl  mmlu_dataset_clinical_knowledge_test_500.pkl  mmlu_dataset_college_biology_test_500.pkl  mmlu_dataset_college_chemistry_test_5.pkl  mmlu_dataset_college_chemistry_test_500.pkl  mmlu_dataset_college_computer_science_test_50.pkl  mmlu_dataset_college_computer_science_test_500.pkl  mmlu_dataset_college_mathematics_test_500.pkl  mmlu_dataset_college_medicine_test_5.pkl  mmlu_dataset_college_medicine_test_500.pkl  mmlu_dataset_college_physics_test_500.pkl  mmlu_dataset_computer_security_test_500.pkl  mmlu_dataset_conceptual_physics_test_5.pkl  mmlu_dataset_conceptual_physics_test_500.pkl  mmlu_dataset_econometrics_test_500.pkl  mmlu_dataset_electrical_engineering_test_500.pkl  mmlu_dataset_elementary_mathematics_test_500.pkl  mmlu_dataset_global_facts_test_5.pkl  mmlu_dataset_global_facts_test_500.pkl  mmlu_dataset_high_school_biology_test_500.pkl  (+46 more)
(+634 files in other folders)
